--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,43 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
+#search {
+	display: inline;
+}
+
+
+
+
+
+
+.search-name {
+	display: inline;
+	margin: 0;
+	line-height: 50px;
+}
+
+.search-calorie-span {
+	float: right;
+	display: inline;
+	margin: 0 30px 0 0;
+	padding: 15px;
+	background: blue;
+	color: #fff;
+	border-radius: 25px;
+	transform: translate( 0px, 0px);
+	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
+		0 6px 30px 5px rgba(0, 0, 0, 0.12),
+		0 8px 10px -5px rgba(0, 0, 0, 0.4),
+		0 -16px 24px 2px rgba(0, 0, 0, 0.14),
+		0 -6px 30px 5px rgba(0, 0, 0, 0.12),
+		0 -8px 10px -5px rgba(0, 0, 0, 0.4);
+}
+
+
+
+
+/* New CSS */
+
+
+
 body {
 	padding-top: 50px;
 	padding-bottom: 20px;
@@ -55,7 +94,8 @@ body {
 
 .my-input {
 	width: 75%;
-	margin: 0 auto;
+	margin: 0 10px 0 40px ;
+	display: inline;
 }
 
 .img-div {
