feat: close toggle restructure main View to encapsulate more than list for now

--- a/src/css/lib/simple-sidebar.css
+++ b/src/css/lib/simple-sidebar.css
@@ -83,7 +83,7 @@
 
 
 
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 767px) {
     .sidebar-nav {
         width: 350px;
     }
