--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,14 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
+
+li {
+	list-style-type: none;
+}
+
+ul {
+	padding: 0 0 0 20px;
+}
+
+
 #search {
 	display: inline;
 }
@@ -12,42 +22,7 @@
 }
 
 
-
-
-.search-name {
-	display: inline;
-	margin: 0;
-	line-height: 50px;
-	cursor: pointer;
-}
-.search-name:hover {
-	color:white;
-}
-
-.search-calorie-span {
-	float: right;
-	display: inline;
-	margin: 0 30px 0 0;
-	padding: 15px;
-	background: blue;
-	color: #fff;
-	border-radius: 25px;
-	transform: translate( 0px, 0px);
-	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
-		0 6px 30px 5px rgba(0, 0, 0, 0.12),
-		0 8px 10px -5px rgba(0, 0, 0, 0.4),
-		0 -16px 24px 2px rgba(0, 0, 0, 0.14),
-		0 -6px 30px 5px rgba(0, 0, 0, 0.12),
-		0 -8px 10px -5px rgba(0, 0, 0, 0.4);
-}
-
-.sidebar-title {
-	display: inline;
-}
-
-.inline {
-	display: inline;
-}
+/* SIDEBAR VIEW CSS */
 
 
 /* New CSS */
@@ -96,6 +71,35 @@ body {
 }
 
 /* Left Sidebar Styles */
+
+
+.search-calorie-span {
+	float: right;
+	display: inline;
+	margin: 0 30px 0 0;
+	padding: 15px;
+	background: blue;
+	color: #fff;
+	border-radius: 25px;
+	transform: translate( 0px, 0px);
+	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
+		0 6px 30px 5px rgba(0, 0, 0, 0.12),
+		0 8px 10px -5px rgba(0, 0, 0, 0.4),
+		0 -16px 24px 2px rgba(0, 0, 0, 0.14),
+		0 -6px 30px 5px rgba(0, 0, 0, 0.12),
+		0 -8px 10px -5px rgba(0, 0, 0, 0.4);
+}
+
+.sidebar-title {
+	display: inline;
+}
+
+.inline {
+	display: inline;
+}
+
+
+
 .ui-autocomplete { /* Solution from stackoverflow */
 	position:absolute;
 	cursor:default;
@@ -124,15 +128,17 @@ body {
 }
 
 .side-25 {
-	width: 25%;
+	widfth: 20%;
 	float: left;
 	position: relative;
-	padding: 0 15px;
+	padding: 0 5px;
 	min-height: 1px;
 }
 
+
+
 .side-75 {
-	width: 75%;
+	width: 80%;
 	float: right;
 	position: relative;
 	padding: 0 15px;
@@ -155,8 +161,16 @@ body {
 	text-align: center;
 }
 
-.place-name {
-	display: block;
+.search-narme {
+	display: inline;
+	margin: 0;
+	line-height: 50px;
+	cursor: pointer;
+}
+
+
+.search-name {
+	display: inline;
 	font-size: 18px;
 	text-decoration: none;
 	color: #263238;
@@ -166,7 +180,7 @@ body {
 		0 1px 1px rgba(0, 0, 0, .25);
 }
 
-.place-name:hover {
+.search-name:hover {
 	text-decoration: none;
 	color: #fff;
 	text-shadow: 0 0 4px black;
