--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,13 +13,6 @@ ul {
 	display: inline;
 }
 
-.star {
-	color: grey;
-}
-
-.favorited {
-	color:green;
-}
 
 
 /* SIDEBAR VIEW CSS */
@@ -73,22 +66,7 @@ body {
 /* Left Sidebar Styles */
 
 
-.search-calorie-span {
-	float: right;
-	display: inline;
-	margin: 0 30px 0 0;
-	padding: 15px;
-	background: blue;
-	color: #fff;
-	border-radius: 25px;
-	transform: translate( 0px, 0px);
-	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
-		0 6px 30px 5px rgba(0, 0, 0, 0.12),
-		0 8px 10px -5px rgba(0, 0, 0, 0.4),
-		0 -16px 24px 2px rgba(0, 0, 0, 0.14),
-		0 -6px 30px 5px rgba(0, 0, 0, 0.12),
-		0 -8px 10px -5px rgba(0, 0, 0, 0.4);
-}
+
 
 .sidebar-title {
 	display: inline;
@@ -118,20 +96,21 @@ body {
 	display: inline;
 }
 
-.img-div {
-	margin: 0 15px;
+.food-image {
 	border-radius: 15px;
-	width: 100%;
 	box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
 		0 1px 8px 0 rgba(0, 0, 0, 0.12),
 		0 3px 3px -2px rgba(0, 0, 0, 0.4);
 }
 
+#search-div {
+	transition: all 0.5s ease;
+}
 .side-25 {
-	widfth: 20%;
+	width: 20%;
 	float: left;
 	position: relative;
-	padding: 0 5px;
+	padding: 0 10px;
 	min-height: 1px;
 }
 
@@ -143,6 +122,22 @@ body {
 	position: relative;
 	padding: 0 15px;
 	min-height: 1px;
+}
+
+.star {
+	color: grey;
+	font-weight: bold;
+	border: 0;
+	background: none;
+	font-size: 20px;
+	transition: all .2s ease-in-out;
+}
+.star:not(.favorited):hover {
+	transform: scale(1.5);
+}
+
+.favorited {
+	color:green;
 }
 
 .sidebar-brand {
@@ -161,21 +156,14 @@ body {
 	text-align: center;
 }
 
-.search-narme {
-	display: inline;
-	margin: 0;
-	line-height: 50px;
-	cursor: pointer;
-}
-
-
 .search-name {
+	margin: 0 5px 0 0;
 	display: inline;
 	font-size: 18px;
 	text-decoration: none;
 	color: #263238;
 	text-indent: 20px;
-	line-height: 40px;
+	line-height: 20px;
 	text-shadow: 0 1px 1px rgba(0, 0, 0, .25),
 		0 1px 1px rgba(0, 0, 0, .25);
 }
@@ -186,33 +174,9 @@ body {
 	text-shadow: 0 0 4px black;
 }
 
-.place-name:active,
-.place-name:focus{
+.search-name:active,
+.search-name:focus{
 	text-decoration: none;
-}
-
-.rating-large {
-	float: right;
-	display: inline;
-	margin: 0 10px 0 0;
-	padding: 20px;
-	background: blue;
-	color: #fff;
-	border-radius: 25px;
-	transform: translate( 0px, -40px);
-	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
-		0 6px 30px 5px rgba(0, 0, 0, 0.12),
-		0 8px 10px -5px rgba(0, 0, 0, 0.4),
-		0 -16px 24px 2px rgba(0, 0, 0, 0.14),
-		0 -6px 30px 5px rgba(0, 0, 0, 0.12),
-		0 -8px 10px -5px rgba(0, 0, 0, 0.4);
-}
-
-.reviews {
-	line-height: 18px;
-	text-decoration: none;
-	padding: 0 0.5em 0 0;
-	transition: all 0.5s ease;
 }
 
 hr {
@@ -228,6 +192,50 @@ hr {
 	box-shadow: inset 0 -2px 10px #607d8b,
 		inset 0 2px 5px #607d8b;
 	margin: 12px 0;
+}
+
+.info-row-top {
+	display: flex;
+	margin: 0 0 0 0;
+	height: 25px;
+	line-height: 35px;
+
+}
+
+.info-item {
+	width: 13.33%;
+
+	text-align: center;
+	border-right: 1px solid #78909c;
+}
+
+.info-cal {
+	width: 20%;
+
+	float: left;
+}
+
+.search-calorie-span {
+	position: absolute;
+	line-height: 15px;
+	display: inline;
+	margin: 0 0 0 8px;
+	padding: 15px;
+	background: blue;
+	color: #fff;
+	border-radius: 25px;
+	transform: translate( 0px, 0px);
+	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
+		0 6px 30px 5px rgba(0, 0, 0, 0.12),
+		0 8px 10px -5px rgba(0, 0, 0, 0.4),
+		0 -16px 24px 2px rgba(0, 0, 0, 0.14),
+		0 -6px 30px 5px rgba(0, 0, 0, 0.12),
+		0 -8px 10px -5px rgba(0, 0, 0, 0.4);
+}
+
+.info-row-btm {
+	display: flex;
+	font-size: 0.8em;
 }
 
 /* NavBar List Items */
@@ -366,13 +374,22 @@ hr {
 	}
 
 	.side-25 {
-		width: 34%;
-		padding: 0 15px;
+		width: 25%;
+		padding: 0 10px;
 	}
 
 	.side-75 {
-		width: 64%;
-		padding: 0 15px;
+		width: 75%;
+		padding: 0 10px 0 5px;
+	}
+	.hide-tog {
+		display: none;
+	}
+	.info-item {
+		width: 25%
+	}
+	.info-cal {
+		width: 30%
 	}
 }
 
