--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,19 +64,60 @@ body {
 }
 
 /* Left Sidebar Styles */
+.top-divider {
+	height: 10px;
+	background: #cfd8dc;
+	box-shadow: inset 0 -2px 10px #616161,
+		inset 0 2px 5px #212121;
+	margin: 0 0;
+}
 
-
-
+.sidebar-brand {
+	background: #FFC107;
+	line-height: 16px;
+	text-indent: 30px;
+	color: #fff;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .25),
+		0 1px 1px rgba(0, 0, 0, .25);
+	padding: 20px 0;
+	box-shadow: 0 3px 2px #777;
+}
 
 .sidebar-title {
+	font-size: 18px;
 	display: inline;
+
 }
+#close {
+	float: right;
+	margin: 0 12px 0 0;
+	color: #607D8B;
+	font-weight: bold;
+	border: 0;
+	background: none;
+	font-size: 20px;
+	transition: all .2s ease-in-out;
+}
+
+#close:hover {
+	transform: scale(1.5);
+
+}
+.directions {
+	font-size: 15px;
+	line-height: 15px;
+	text-align: center;
+}
+
+
 
 .inline {
 	display: inline;
 }
 
-
+.input-li {
+	margin: 10px 0;
+}
 
 .ui-autocomplete { /* Solution from stackoverflow */
 	position:absolute;
@@ -96,6 +137,9 @@ body {
 	display: inline;
 }
 
+.food-entry {
+	height: 100%;
+}
 .food-image {
 	border-radius: 15px;
 	box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
@@ -105,6 +149,7 @@ body {
 
 #search-div {
 	transition: all 0.5s ease;
+	padding: 0 10px 0 10px;
 }
 .side-25 {
 	width: 20%;
@@ -125,7 +170,7 @@ body {
 }
 
 .star {
-	color: grey;
+	color: #607D8B;
 	font-weight: bold;
 	border: 0;
 	background: none;
@@ -140,21 +185,7 @@ body {
 	color:green;
 }
 
-.sidebar-brand {
-	font-size: 20px;
-	line-height: 35px;
-	text-align: center;
-	color: #263238;
-	text-shadow: 0 1px 1px rgba(0, 0, 0, .25),
-		0 1px 1px rgba(0, 0, 0, .25);
-	margin: 20px 0;
-}
 
-.directions {
-	font-size: 15px;
-	line-height: 15px;
-	text-align: center;
-}
 
 .search-name {
 	margin: 0 5px 0 0;
@@ -217,12 +248,13 @@ hr {
 
 .search-calorie-span {
 	position: absolute;
+	font-size: 18px;
 	line-height: 15px;
 	font-weight: bold;
 	display: inline;
 	margin: 0 0 0 8px;
 	padding: 15px;
-	background: blue;
+	background: #FFC107;
 	color: #fff;
 	border-radius: 25px;
 	transform: translate( 0px, 0px);
@@ -394,6 +426,10 @@ hr {
 	}
 	.info-cal {
 		width: 30%
+	}
+	.my-input {
+		margin: 0 8px 0 10px;
+		width: 83%;
 	}
 }
 
