--- a/src/css/style.css
+++ b/src/css/style.css
@@ -454,7 +454,7 @@ h3 {
 }
 .text-btn {
 	float: right;
-	margin: 0 35px 20px 0;
+	margin: 0 35px 20px 20px;
 	font-size: 20px;
 }
 
@@ -468,14 +468,47 @@ h3 {
 
 .sum-row {
 	display: flex;
+	width: 100%;
 }
 
+.sum-col {
+	margin: auto;
+}
+.sum-sub {
+	font-size: 20px;
+	margin: 0;
+}
+.sum-btn {
+	margin: 10px 0 15px 0;
+	font-size: 20px;
+}
+
+
 .big {
-	font-size: 100px;
+	font-size: 80px;
 }
 
 .test {
 	width: 100%;
+}
+#donut {
+	position: relative;
+	margin: 0 10px 0 0;
+}
+
+.calorie-small {
+	font-size: 50px;
+	position: absolute;
+	top: 60px;
+	left: 60px;
+
+
+}
+.graph-text {
+		text-shadow: 0 0 3px #fff;
+		font-weight: bold;
+		text-transform: uppercase;
+
 }
 /* InfoWindow Styles */
 
@@ -589,5 +622,13 @@ h3 {
 	.my-btn {
 		padding: 6px 8px;
 	}
+
+	#summary,
+	.totals,
+	#food-main,
+	#trends {
+		width: 98%;
+	}
+
 
 }
