--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,12 +8,40 @@ ul {
 	padding: 0 0 0 20px;
 }
 
+a {
+	text-decoration: none;
+	color: #fff;
+	font-size: 14px
+}
+
+a:hover {
+	text-decoration: none;
+
+}
 
 #search {
 	display: inline;
 }
 
+.sub-section {
+	min-width: 350px;
+	max-width: 700px;
+	width: 45%;
+	margin: 8px auto;
+	background: #fff;
+	box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+	transition: all 0.3s ease;
 
+}
+.sub-section:last-child {
+	min-width: 350px;
+	width: 45%;
+	margin: 8px auto;
+	background: #fff;
+	box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+	transition: all 0.3s ease;
+
+}
 
 /* SIDEBAR VIEW CSS */
 
@@ -51,12 +79,26 @@ body {
 
 .btn-div {
 	display: flex;
+	float: right;
 }
 
 .my-btn {
 	flex-grow:0;
 	text-align: center;
-	margin: auto;
+	margin: 0 10px;
+	font-size: 14px;
+	background-image: linear-gradient(to bottom, #FFD54F 0, #FFC107 100%);
+	float: right;
+	border-color:#FFB300;
+	border-radius: 4px;
+	color: #fff;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .25),
+		0 1px 1px rgba(0, 0, 0, .25);
+}
+
+.my-btn:hover {
+		background-image: linear-gradient(to bottom, #FFC107 0, #FFA000 100%);
+
 }
 
 
@@ -210,7 +252,7 @@ body {
 
 hr {
 	border: 1px solid #78909c;
-	margin: 10px;
+	margin: 10px auto;
 	background: #90a4ae;
 	width: 85%;
 	box-shadow: 2px 2px 10px #90A4AE;
@@ -274,56 +316,12 @@ hr {
 	transition: all 0.5s ease;
 }
 
-/* NavBar List Items */
-.small-div {
-	display: none;
-}
-
-.small-img-div {
-	margin: 0 15px;
-	float: left;
-	border-radius: 10px;
-	width: 40px;
-	height: 40px;
-	box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
-		0 1px 8px 0 rgba(0, 0, 0, 0.12),
-		0 3px 3px -2px rgba(0, 0, 0, 0.4);
-}
-
-.small-place-name {
-	display: inline;
-	font-size: 20px;
-	text-decoration: none;
-	color: #ccc;
-	text-indent: 20px;
-	line-height: 40px;
-	text-shadow: 0 1px 1px rgba(0, 0, 0, .25),
-		0 1px 1px rgba(0, 0, 0, .25);
-}
-
-.small-place-name:hover {
-	text-decoration: none;
-	color: #fff;
-	text-shadow: 0 0 4px black;
-}
 
 
-.small-rating {
-	display: inline;
-	float: right;
-	margin: 3px;
-	padding: 9px;
-	background: #0d47a1;
-	color: #fff ;
-	border-radius: 6px;
-	box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
-		0 1px 8px 0 rgba(0, 0, 0, 0.12),
-		0 3px 3px -2px rgba(0, 0, 0, 0.4);
-}
 
-.longString {
-	font-size: 14px;
-}
+
+
+
 
 /* HEADER Styles */
 header {
@@ -402,7 +400,7 @@ color: #FFC400;
 	flex-wrap: wrap;
 	align-items: flex-start;
 }
-#food-main {
+#food-mainX {
 	min-width: 350px;
 	width: 45%;
 	margin: 8px;
@@ -410,8 +408,8 @@ color: #FFC400;
 	box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
 }
 
- #trends,
- .totals {
+ #trendsX,
+ .totalsX {
  	width: 50%;
  	margin: 8px;
 	background: #fff;
@@ -462,17 +460,20 @@ h3 {
 	transform: scale(1.5);
 }
 .text-btn {
+	background-image: linear-gradient(to bottom, #FFD54F 0, #FFC107 100%);
 	float: right;
 	margin: 0 35px 20px 20px;
 	font-size: 20px;
+	border-color:#FFB300;
+	border-radius: 4px;
+	color: #fff;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .25),
+		0 1px 1px rgba(0, 0, 0, .25);
 }
 
-#summary {
-	min-width: 350px;
-	width: 45%;
-	margin: 8px;
-	background: #fff;
-	box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+.text-btn:hover {
+		background-image: linear-gradient(to bottom, #FFC107 0, #FFA000 100%);
+
 }
 
 .sum-row {
@@ -487,10 +488,6 @@ h3 {
 .sum-sub {
 	font-size: 20px;
 	margin: 0;
-}
-.sum-btn {
-	margin: 10px 0 15px 0;
-	font-size: 20px;
 }
 
 
@@ -574,102 +571,18 @@ text-shadow: 0 0 3px #fff;
 }
 
 .graph-title {
-	font-size: 30px;
+	font-size: 25px;
 }
 #line-graph {
 	margin: auto;
 	display:block;
-	transform: scale(0.8);
-	transform-origin: top left;
+
 }
 
-/* InfoWindow Styles */
-
-.infowindow-image {
-	float: left;
-}
-
-.info-title {
-	display: inline;
-	margin: 15px;
-}
-
-.rating {
-	display: inline;
-	float: right;
-	margin: 8px;
-	padding: 15px;
-	background: #0d47a1;
-	color: #fff ;
-	border-radius: 10px;
-	transform: translate( 0px, 0px);
-	box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
-		0 1px 8px 0 rgba(0, 0, 0, 0.12),
-		0 3px 3px -2px rgba(0, 0, 0, 0.4);
-}
-
-/* Additional Filter Categories Styles */
-
-.radio-heading {
-	display:none;
-	color: #ccc;
-	margin: 12px auto;
-	text-align: center;
-	width: 100%;
-}
-
-.radio-divider {
-	display: none;
-	height: 10px;
-	background: #ccc;
-	box-shadow: inset 0 -2px 10px #607d8b,
-		inset 0 2px 10px #607d8b;
-}
-
-#radio-button-bar {
-	display: none;
-}
-
-#radio {
-	margin: auto 3px;
-	flex-grow: 1;
-}
-
-.radio-button {
-	margin: 2px 2px 2px 18px;
-	flex-grow: 1;
-	transition: all 0.5s ease;
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
-}
-
-.radio-button:hover,
-.radio-button:active,
-.radio-button:focus {
-	color: #fff;
-}
-
-#summary,
-	.totals,
-	#food-main,
-	#trends {
-		transition: all 0.3s ease;
-	}
 /*   Responsive Styles Radio Button bar and size of sidebar columns */
 
 
 @media screen and (max-width: 767px) {
-	#radio-button-bar {
-		display: block;
-		display: flex;
-		flex-wrap: wrap;
-	}
-
-	.small-div,
-	.radio-divider,
-	.radio-heading {
-		display:block;
-	}
-
 	.side-25 {
 		width: 25%;
 		padding: 0 10px;
@@ -696,15 +609,14 @@ text-shadow: 0 0 3px #fff;
 		display: none;
 	}
 
-	#summary,
-	.totals,
-	#food-main,
-	#trends {
+	.sub-section {
 		width: 88%;
 		margin: 8px auto;
 	}
-
-
+	.sub-section:last-child {
+		width: 88%;
+		margin: 8px auto;
+	}
 }
 
 @media screen and (max-width: 415px) {
