--- a/src/css/style.css
+++ b/src/css/style.css
@@ -148,7 +148,12 @@ body {
 #sidebar-wrapper { /* I'm piggy-backing an ID needed for toggle feature*/
 	background: #cfd8dc;
 	direction: rtl;
-	box-shadow: 4px 0 6px -3px rgba(0, 0, 0, 0.4);
+	box-shadow: 40px 0  77px 0 rgba(0, 0, 0, 0.22),
+				27px 0  24px 0 rgba(0, 0, 0, 0.2),
+				60px 0  77px 0 rgba(0, 0, 0, 0.2);
+
+
+
 }
 
 .my-input {
