--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,13 +23,14 @@ a:hover {
 }
 
 .sub-section {
-	min-width: 350px;
+	min-width: 370px;
 	max-width: 700px;
 	width: 45%;
 	margin: 8px auto;
 	background: #fff;
 	box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
 	transition: all 0.3s ease;
+	overflow: hidden;
 }
 
 body {
@@ -151,9 +152,6 @@ body {
 	box-shadow: 40px 0  77px 0 rgba(0, 0, 0, 0.22),
 				27px 0  24px 0 rgba(0, 0, 0, 0.2),
 				60px 0  77px 0 rgba(0, 0, 0, 0.2);
-
-
-
 }
 
 .my-input {
@@ -252,19 +250,20 @@ hr {
 }
 
 .info-item {
-	width: 13.33%;
+	width: 13%;
 	font-size:17px;
 	text-align: center;
 	border-right: 1px solid #78909c;
 }
 
 .info-cal {
-	width: 20%;
-
+	width: 22%;
 	float: left;
 }
 
 .search-calorie-span {
+	width: 60px;
+	text-align: center;
 	position: absolute;
 	font-size: 18px;
 	line-height: 15px;
@@ -274,7 +273,7 @@ hr {
 	padding: 15px;
 	background: #FFD54F;
 	color: #607D8B;
-	border-radius: 25px;
+	border-radius: 20px;
 	transform: translate( 0px, 0px);
 	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
 		0 6px 30px 5px rgba(0, 0, 0, 0.12),
@@ -541,7 +540,25 @@ text-shadow: 0 0 3px #fff;
 	display:block;
 }
 
-/*   Responsive Styles Radio Button bar and size of sidebar columns */
+/*   Responsive Styles Radio Button bar and size of sidebar columns
+The first deals with the awkward transition from 2 colums back to 1 */
+@media screen and (max-width: 975px) {
+	.big {
+		font-size: 60px;
+	}
+	.hide-tog {
+		display: none;
+	}
+	.info-item {
+		width: 25%;
+	}
+
+	.info-cal {
+		width: 30%
+	}
+
+
+}
 
 @media screen and (max-width: 767px) {
 	.side-25 {
@@ -555,15 +572,15 @@ text-shadow: 0 0 3px #fff;
 	}
 
 	.hide-tog {
-		display: none;
+		display: block;
 	}
 
 	.info-item {
-		width: 25%;
+		width: 13%;
 	}
 
 	.info-cal {
-		width: 30%
+		width: 22%
 	}
 
 	.my-input {
@@ -578,6 +595,9 @@ text-shadow: 0 0 3px #fff;
 	.sub-section {
 		width: 88%;
 		margin: 8px auto;
+	}
+	.big {
+		font-size: 80px;
 	}
 }
 
@@ -598,5 +618,9 @@ text-shadow: 0 0 3px #fff;
 	.x-axis,
 	.y-axis {
 		display: none;
+	}
+
+	.big {
+		font-size: 60px;
 	}
 }
