refactor: linting and validator

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -666,3 +666,4 @@ The first deals with the awkward transition from 2 colums back to 1 */
 		transform: scale(0.6) translateX(-40px);
 		transform-origin: top left;
 	}
+}
