--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,7 +15,7 @@ a {
 }
 
 a:hover {
-	text-decoration: none;
+	text-decoration: none
 }
 
 #search {
@@ -31,6 +31,7 @@ a:hover {
 	box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
 	transition: all 0.3s ease;
 	overflow: hidden;
+	border-radius: 5px;
 }
 
 body {
@@ -44,14 +45,10 @@ body {
 .my-nav {
 	background-image: linear-gradient(to bottom, #78909c 0%, #546e7a 100%);
 	border-color: #455a64;
-		box-shadow: 0px 4px 6px -3px rgba(0, 0, 0, 0.4);
+		box-shadow: 0 4px 6px -3px rgba(0, 0, 0, 0.4);
 }
 
 .row {
-	height: 100%;
-}
-
-#map {
 	height: 100%;
 }
 
